	* Removed some depricated functions
	* New set of fann_create functions
	* Altered the way the callback function works
	* Training can be stopped by counting the number of datasets that fail instead of just MSE
	* Fixed a memory leak when copying training data
	* More activation functions
	* Enums used instead of integers for several parameters.
	* Possebility to set default logging facility

libfann (1.2.0) stable; urgency=low
	* Fixes for better compability with different compilers
	* Shortcut connections that skip layers
	* Changed version of save fileformat
	* fann_print_connections function
	* More activation functions
	* Batch training
	* RPROP training (default)
	* Quickprop training
	* fann_get_training_algorithm and fann_set_training_algorithm functions
	* fann_test_data function
	* fann_print_parameters function
	* Renamed some functions and variables to avoid confusion of terms (kept deprecated functions)
	
 -- Steffen Nissen <lukesky@diku.dk> Sat, 09 Oct 2004 11:13:22 +0200

libfann (1.1.0) stable; urgency=low
	* Error checking when allocating memory
	* Debian package
	* RPM package
	* Added pkg-config
	* Deallocate correctly in case of an error
	* Renamed fann_get_error to fann_get_MSE (keeping old one for now)
	* Renamed fann_reset_error to fann_reset_MSE (keeping old one for now)
	* Rearanged some code for easy access by the newly created fann php module 
	* Defined more activation functions and documented the old (in fann_activation.h)
	* Customize error output
	* Added fann_set_error_log, fann_shuffle_train_data, fann_merge_train_data, and fann_duplicate_train_data, fann_init_weights
	* Added python bindings
	* Created DocBook XML documentation, including API reference
	* Rearanged files for easier development
	* Added MSVC++ project files
	
 -- Steffen Nissen <lukesky@diku.dk> Wed, 31 Mar 2004 21:19:32 +0200

libfann (1.0.5) stable; urgency=low
	* Added a new constructor
	* Added a callback function for output during training